--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kyohei's Personal site</title>
+  <title>K's Personal site</title>
 </head>
 
 <body>
   <table cellspacing = "20">
     <tr>
       <td>
-        <a href="https://www.linkedin.com/in/kyohei-y-3a631a26/" target = "_blank"><img src="images/KyoheiYamada.png" alt="kyohei Yamada profile picture"></a>
+        <a href="https://www.linkedin.com/in/kyohei-y-3a631a26/" target = "_blank"><img src="images/K.png" alt="K's profile picture"></a>
       </td>
       <td>
-        <h1><a href="https://www.linkedin.com/in/kyohei-y-3a631a26/" target="_blank"><strong>Kyohei Yamada</strong></a></h1>
-        <p><em>Director at <strong>Plaid</strong></em></p>
+        <h1><a href="https://www.linkedin.com/in/kyohei-y-3a631a26/" target="_blank"><strong>K</strong></a></h1>
+        <p><em>Employed at <strong>P</strong></em></p>
         <p>I am an iOS and Web Developer. I love coffee and my own beer.</p>
       </td>
     </tr>
@@ -22,8 +22,8 @@
   <hr size = "3">
   <h3>Education</h3>
   <ul>
-    <li>University of Tokyo, Applied biotechnlogy</li>
-    <li>Graduate school of Engineering, University of Tokyo</li>
+    <li>U of Tokyo, Applied biotechnlogy</li>
+    <li>Graduate school of Engineering</li>
   </ul>
   <hr>
   <h3>My Hobbies</h3>
